cmake_minimum_required(VERSION 2.8)

if(POLICY CMP0020)
	cmake_policy(SET CMP0020 NEW)
endif()

project(OpenThinning)

option(WITH_ITK "Build ITK example" ON)
if(WITH_ITK)
	find_package(ITK REQUIRED)
	include(${ITK_USE_FILE})
	find_package(OpenMP)
	if (OPENMP_FOUND)
		set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
		set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
		set (CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
	endif()
	add_executable(OpenThinning_ITK Source/main_itk.cpp)
	target_link_libraries(OpenThinning_ITK ${ITK_LIBRARIES})
endif()
